--- a/src/game.css
+++ b/src/game.css
@@ -1,11 +1,13 @@
 * {
+  font-family: 'Raleway', sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  pointer-events: none;
 }
 
 body {
-  background: #6fd782;
+  background: #e4e4e4;
   overflow: hidden;
 }
 
@@ -16,7 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.1s ease-in-out;
 }
 
@@ -25,8 +27,9 @@ body {
 }
 
 .cards {
+  pointer-events:all;
   flex-grow: 1;
-  padding-top: 40px;
+  padding-bottom: 40px;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -35,13 +38,13 @@ body {
 }
 
 .card {
-  display: inline-block;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+  pointer-events:all;
   width: 90vw;
   max-width: 400px;
   height: 70vh;
   background: #ffffff;
-  padding-bottom: 40px;
-  border-radius: 8px;
+  border-radius: 20px;
   overflow: hidden;
   position: absolute;
   will-change: transform;
@@ -49,6 +52,8 @@ body {
   cursor: -webkit-grab;
   cursor: -moz-grab;
   cursor: grab;
+  display: flex;
+  flex-flow: column;
 }
 
 .moving.card {
@@ -59,20 +64,28 @@ body {
 }
 
 .card img {
+  order: 1;
   max-width: 100%;
-  pointer-events: none;
 }
 
 .card h3 {
-  margin-top: 32px;
+  order: 2;
   font-size: 32px;
-  padding: 0 16px;
-  pointer-events: none;
+  padding: 16px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+}
+
+.card .textContainer
+{
+  order: 3;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .card p {
-  margin-top: 24px;
+  width: 100%;
   font-size: 20px;
-  padding: 0 16px;
-  pointer-events: none;
+  text-align: center;
 }
