--- a/src/game.css
+++ b/src/game.css
@@ -27,14 +27,15 @@ body {
 }
 
 .cards {
-  pointer-events:all;
+  pointer-events: all;
   flex-grow: 1;
   padding-bottom: 40px;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  z-index: 1;
+  z-index: 5;
+  position: relative;
 }
 
 .card {
@@ -88,4 +89,71 @@ body {
   width: 100%;
   font-size: 20px;
   text-align: center;
+}
+
+.header {
+  background-color: gray;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 0;
+}
+
+.resources {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.resource {
+  position: relative;
+  margin: 35px;
+}
+
+.resource-image {
+  width: 50px;
+}
+
+.progress-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: white;
+}
+
+.selection-dot {
+  position: absolute;
+  width: 420px;
+  height: 120px;
+  background-color: white;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+}
+
+.left-dot {
+  left: 5px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.right-dot {
+  right: 5px;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
+
+.dot-text {
+  font-size: 25px;
+  font-weight: normal;
 }
