--- a/src/game.css
+++ b/src/game.css
@@ -92,7 +92,8 @@ body {
 }
 
 .header {
-  background-color: gray;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.25);
   height: 100px;
   display: flex;
   align-items: center;
@@ -130,6 +131,7 @@ body {
 
 .selection-dot {
   position: absolute;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   width: 420px;
   height: 120px;
   background-color: white;
