--- a/src/game.css
+++ b/src/game.css
@@ -49,7 +49,7 @@ body {
   overflow: hidden;
   position: absolute;
   will-change: transform;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.5s ease-in-out;
   cursor: -webkit-grab;
   cursor: -moz-grab;
   cursor: grab;
@@ -125,6 +125,7 @@ body {
 }
 
 .progress-bar {
+  transition: height 1s, box-shadow 0.3s;
   position: absolute;
   top: 0;
   left: 0;
@@ -140,27 +141,29 @@ body {
 }
 
 .selection-dot {
+  transition: transform 0.1s ease-in-out, box-shadow 0.1s;
   position: absolute;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
   width: 420px;
   height: 120px;
   background-color: white;
   top: 50%;
-  transform: translateY(-50%);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2;
+  z-index: 10;
 }
 
 .left-dot {
-  left: 5px;
+  padding-left: 100px;
+  left: -100px;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
 }
 
 .right-dot {
-  right: 5px;
+  padding-right: 100px;
+  right: -100px;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
