--- a/src/game.css
+++ b/src/game.css
@@ -144,8 +144,8 @@ body {
   transition: transform 0.1s ease-in-out, box-shadow 0.1s;
   position: absolute;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
-  width: 420px;
-  height: 120px;
+  width: 30%;
+  height: 15%;
   background-color: white;
   top: 50%;
   display: flex;
