--- a/src/game.css
+++ b/src/game.css
@@ -172,3 +172,54 @@ body {
   font-size: 25px;
   font-weight: normal;
 }
+
+.screen-overlap {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+
+  background: rgba(228, 228, 228, 0.8);
+
+  z-index: 10000;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ending-menu {
+  background-color: #ffffff;
+
+  border-radius: 20px;
+  padding: 30px 40px;
+
+  text-align: center;
+}
+
+.ending-text {
+  font-size: 40px;
+
+  margin-bottom: 20px;
+}
+
+.ending-text_lose {
+  color: red;
+}
+
+.menu-link {
+  color: #828282;
+  font-weight: bold;
+
+  background-color: #e4e4e4;
+
+  width: auto;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 20px;
+}
+
+.disabled {
+  display: none;
+}
